fix: coupon entity localdatetime 기본값 제거, couponservice 테스트코드 오류 수정